namespace ClearMeasure.Bootcamp.Core.Model.StateCommands;
public record InProgressToCancelledCommand(WorkOrder WorkOrder, Employee CurrentUser) : StateCommandBase(WorkOrder, CurrentUser)
{
    public const string Name = "Cancel";

    public override string TransitionVerbPresentTense => "Cancel";

    public override string TransitionVerbPastTense => "Cancelled";

    public override WorkOrderStatus GetBeginStatus()
    {
        return WorkOrderStatus.InProgress;
    }

    public override WorkOrderStatus GetEndStatus()
    {
        return WorkOrderStatus.Cancelled;
    }

    protected override bool UserCanExecute(Employee currentUser)
    {
        return CurrentUser == WorkOrder.Creator;
    }
}
